--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -2,60 +2,47 @@
   <%= stylesheet_link_tag "index" %>
   <script type="text/javascript">
     $(function() {
-      $(".huh").tooltip();
-      $(".huh").click(function() {
-        return false;
-      });
       init();
       initSearch();
-      initMap();
-      $.get(points_path + ".json", function(data) {
-        addPins(data);
-      });
     });
   </script>
 <% end %>
 
-<div class="container">
+<div class="container" style="text-align: center;">
   <div class="row">
-    <div class="col-lg-4 blurb">
-      <h2 class="brand page-title">yeşil harita</h2>
-      <p> Geri dönüşüm haritası</p>
-      <p> Geri dönüşüm noktası  <%= link_to "arayabilir", map_path %>    yada  <%= link_to "ekleyebilirsiniz", add_path %> </p>
-     
-      <table class="table">
-        <tbody>
-          <tr>
-            <td><%= image_tag "tree-numbered.png", :alt => "tree icon" %></td>
-            <td>5 geridönüşüm noktası</td>
-            <td><a href="#" class="huh" data-toggle="tooltip" title="">?</a></td>
-          </tr>
-          <tr>
-            <td><%= image_tag "pin-recycle-bin.png", :alt => "recycle bin icon" %></td>
-            <td>Geri dönüşüm noktası</td>
-            <td><a href="#" class="huh" data-toggle="tooltip" title="">?</a></td>
-          </tr>
-          <tr>
-            <td><%= image_tag "pin-recycling-center.png", :alt => "recycling center icon" %></td>
-            <td>Toplama noktası</td>
-            <td><a href="#" class="huh" data-toggle="tooltip" title="">?</a></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-lg-8">
-      <div id="map-canvas"></div>
-      <div id="fb-root"></div>
-      <script>(function(d, s, id) {
+    
+      <h2 class="brand page-title">Komşu yapar</h2>
+      <p class="lead">
+        İhtiyacın olan hizmetleri yakın çevrenden ara, yapabileceklerini sende ekle!
+      </p>
+      
+       <form id="search" class="yetenek-search">
+              <div class="input-group input-group-lg">
+                <input id="city" class="form-control" type="text" placeholder="Hizmet ara...">
+                <span class="input-group-btn">
+                        <button class="btn" type="submit">Ara</button>
+                </span>
+              </div>
+       </form>
+       <p>
+        <%= link_to "SENDE YETENEKLERİNİ EKLE", 
+          add_path,:class=>"btn btn-lg btn-yetenek-ekle" %> 
+        </p>
+        <p>
+        <%= link_to "Haritaya git", 
+          add_path,:class=>"btn btn-lg btn-yetenek-ekle" %> 
+        </p>
+      
+   
+  </div>
+</div>
+
+<script>
+   (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=176820222509186";
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1144239158920317";
         fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));</script>
-      <div style="margin-top: 10px;" class="fb-like pull-right" data-href="https://www.facebook.com/yesil-harita" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="false" data-send="false"></div>
-
-
-    </div>
-  </div>
-</div>
+      }(document, 'script', 'facebook-jssdk'));
+</script>
