--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,19 +5,10 @@
     <title><%= @page_name %>yeşil harita</title>
     <meta name="description" content="<%= @page_description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%= stylesheet_link_tag "main/bootstrap" %>
-    <%= stylesheet_link_tag "main/style" %>
-
-
+    <%= stylesheet_link_tag "application" %>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans'
      rel='stylesheet' type='text/css'>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js" %>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/jquery-ujs/1.1.0/rails.min.js" 
-    %>
-    <%= javascript_include_tag "main/bootstrap"  %>
-    <%= javascript_include_tag "main/markerclusterer"  %>
-    <%= javascript_include_tag "main/handlebars"  %>
-    <%= javascript_include_tag "main/script"  %>
+    <%= javascript_include_tag "application" %>
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyBk8oJpa8bHai2nEGnIqCjZga4fHhnJawY&sensor=true&language=tr" %>
     <%= render :partial => "layouts/infowindow" %>
     <script type="text/javascript">
@@ -51,15 +42,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="<%= root_url %>">yeşil<small>harita</small></a>
+          <a class="navbar-brand" href="<%= root_url %>">komşu<small>yapar</small></a>
         </div>
         <div class="navbar-collapse collapse">
-          <form id="search" class="navbar-form navbar-left">
-            <div class="form-group">
-              <input id="city" class="form-control" type="text" placeholder="Adress...">
-            </div>
-            <button type="submit" class="btn btn-default">Ara</button>
-          </form>
           <ul class="nav navbar-nav navbar-right">
             <li <%= if current_page?(:controller => "hello", :action => "map") then 'class="active"'.html_safe end %>>
               <%= link_to "Harita", map_path %>
