--- a/app/assets/stylesheets/main/style.css
+++ b/app/assets/stylesheets/main/style.css
@@ -58,7 +58,7 @@ html, body {
 }
 
 .navbar .navbar-nav a:hover {
-  color: ##F7F3F3 !important;
+  color: #F7F3F3 !important;
 }
 
 .navbar .navbar-nav .active a,
