--- a/app/views/layouts/_infowindow.html.erb
+++ b/app/views/layouts/_infowindow.html.erb
@@ -8,7 +8,7 @@
         {{#each tags}}
           <a class="list-group-item">
           <p class="list-group-item-text">
-            <%= image_tag "icon-file.png", :alt => "material icon" %> {{name}}
+            {{name}}
           </p>
           </a>
         {{/each}}
