--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -13,7 +13,7 @@
     
       <h2 class="brand page-title">Komşu yapar</h2>
       <p class="lead">
-        İhtiyacın olan hizmetleri yakın çevrenden ara, yapabileceklerini sende ekle!
+        İhtiyacın olan hizmetleri yakın çevrenden ara, yapabileceklerini sen de ekle!
       </p>
       
        <form id="search" class="yetenek-search">
@@ -25,12 +25,12 @@
               </div>
        </form>
        <p>
-        <%= link_to "SENDE YETENEKLERİNİ EKLE", 
+        <%= link_to "SEN DE YETENEKLERİNİ EKLE", 
           add_path,:class=>"btn btn-lg btn-yetenek-ekle" %> 
         </p>
         <p>
         <%= link_to "Haritaya git", 
-          add_path,:class=>"btn btn-lg btn-yetenek-ekle" %> 
+          map_path,:class=>"btn btn-lg btn-yetenek-ekle" %> 
         </p>
       
    
