--- a/app/views/layouts/_infowindow.html.erb
+++ b/app/views/layouts/_infowindow.html.erb
@@ -5,7 +5,7 @@
         <a class="list-group-item active">
           <h5 class="list-group-item-heading">Yetenekler</h5>
         </a>
-        {{#each tags}}
+        {{#each user_skills}}
           <a class="list-group-item">
           <p class="list-group-item-text">
             {{name}}
