--- a/app/views/points/new.html.erb
+++ b/app/views/points/new.html.erb
@@ -8,10 +8,11 @@
 
       $("#point_skils_ids").select2({
         theme: "bootstrap",
-        placeholder: "Yetenek seç...",
+        placeholder: "Yeteneklerini ekle...",
         allowClear: true,
-        tags: true,
-        tokenSeparators: [',', ' ']
+        tokenSeparators: [','],
+        maximumInputLength: 50,
+        minimumInputLength: 2
       });
 
     });
@@ -22,16 +23,12 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-5">
-      <h2 class="page-title">Yetenek ekle</h2>
-
       <% if current_user %>
 
         <%= form_for(@point, :html => { :class => "form-horizontal", :role => "form" }) do |f| %>
-          <div class="btn-group btn-group-justified">
-            <a href="#" class="btn btn-success active" data-point-type="0">
-              Yetenekler
-            </a>
-          </div>
+          
+          <h3>Yeteneklerini belirle</h3>
+          <hr/>
 
           <%= f.hidden_field :lat %>
           <%= f.hidden_field :lng %>
@@ -57,9 +54,10 @@
           <div id="alert" class="alert alert-warning collapse"></div>
 
           <div class="form-group">
-            <div class="col-lg-offset-3 col-lg-9">
-              <button name="commit" type="submit" class="btn btn-success">Ekle</button>
-            </div>
+          
+          <div class="col-lg-offset-3 col-lg-9">
+            <button name="commit" type="submit" class="btn btn-success">Ekle</button>  
+          </div>
           </div>
         <% end %>
 
