--- a/app/views/hello/about.html.erb
+++ b/app/views/hello/about.html.erb
@@ -4,12 +4,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-6">
-      
-     
-    </div>
-    <div class="col-lg-6">
-     
-    </div>
+   <p><h3>Herkesin yapabileceği bir şeyler var.</h3></p>
+   <p>
+   <h4>Profesyonel yetkinliklerini, yan yeteneklerini, yapabileceğin basit işleri listele; ihtiyaç duyduğun hizmetleri ve yetenekleri yakınındaki kişilerden bul ve iletişime geç!
+   </h4>
+   </p> 
   </div>
 </div>
