--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,11 @@
 */
 
 //= require main/bootstrap
-//= require font-awesome
+
+
+ *= require font-awesome
+ 
+
 //= require select2
 //= require select2-bootstrap
 //= require main/style
