--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
                </a>
                <ul class="dropdown-menu">
                 <li class="divider"></li>
-                <li><a href="http://www.sensekit.com/bildirimler">Tüm bildirimleri göster</a></li>
+                <li><a href="/bildirimler">Tüm bildirimleri göster</a></li>
                </ul>
              </li>
               <li class="dropdown">
