--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,11 +1,113 @@
 /*
- * This is a manifest file that'll automatically include all the stylesheets available in this directory
- * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
- * the top of the compiled file, but it's generally better to create a new file per style scope.
-*/
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the top of the
+ * compiled file, but it's generally better to create a new file per style scope.
+ *
+ *= require_self
+ *= require bootstrap_and_overrides
+ *= require font-awesome
+ *= require select2
+ *= require select2-bootstrap
+ *= require main/style
+ 
+ */
 
-//= require main/bootstrap
-//= require font-awesome
-//= require select2
-//= require select2-bootstrap
-//= require main/style
+
+
+
+
+
+/*.content {
+  margin-top: 30px;
+}
+
+
+
+
+input {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.content {
+  margin-top: 30px;
+}
+
+.m-center {
+  margin: 0px auto;
+  width: 500px;
+}
+
+.hit-auto-complete {
+
+  em {
+    font-weight: bold;
+    font-style: normal;
+  }
+
+  .email {
+    font-size: 0.9em;
+  }
+
+  .company {
+    text-align: right;
+    font-size: 0.8em;
+    color: #999;
+  }
+
+}
+
+.instant-search-form {
+  width: 500px !important; height: 70px !important; padding: 0px !important; margin: 0px !important; background: white; font-size: 24px !important;
+  padding-left: 5px !important; border: 2px solid #18bc9c !important;
+}
+
+#hits {
+  margin-top: 30px;
+}
+
+.search-terms {
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.hit-instant-search {
+  border: 1px solid #EFEFEF;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+
+  em {
+    font-weight: bold;
+    font-style: normal;
+  }
+
+  .name {
+    font-size: 20px;
+  }
+
+  .created_at {
+    float: right;
+    color: green;
+    font-size: 0.6em;
+  }
+
+  .company {
+    float: right;
+    color: #999;
+  }
+}
+
+.twitter-typeahead, .tt-input, .tt-hint { width: 500px !important; height: 50px !important; padding: 0px !important; margin: 0px !important; background: white; font-size: 24px !important; }
+.twitter-typeahead { padding-left: 5px !important; border: 2px solid #18bc9c !important; }
+.tt-input { -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
+.tt-hint { margin: 0px !important; padding: 0px !important; padding-left: 5px !important; color: #AAA !important; border: 0px !important; }
+.tt-dropdown-menu { width: 100%; margin-left: -2px; padding: 8px 0; background-color: #fff; border: 2px solid #18bc9c; border-top: 0px; -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2); -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2); box-shadow: 0 5px 10px rgba(0,0,0,.2); }
+.tt-suggestion { text-align: left; padding: 5px 10px; font-size: 16px; }
+.tt-suggestion.tt-cursor { color: #fff; background-color: #18bc9c; }
+.tt-suggestion em { font-weight: bold; font-style: normal; }*/
