--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <title><%= @page_name %>yeşil harita</title>
-    <meta name="description" content="<%= @page_description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%= stylesheet_link_tag "application" %>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans'
-     rel='stylesheet' type='text/css'>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-     
-    <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
+    <title><%= "#{yield(:title)}" if content_for?(:title) %></title>
+    <meta name="description" content="<%= @page_description %>">
+    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyBk8oJpa8bHai2nEGnIqCjZga4fHhnJawY&sensor=true&language=tr" %>
     <%= render :partial => "layouts/infowindow" %>
     <script type="text/javascript">
@@ -21,85 +15,30 @@
       var points_path = "<%= points_path %>";
     </script>
     <%= yield :head %>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-71829386-1', 'auto');
-    ga('send', 'pageview');
-   </script>
-    
+    <%= render 'layouts/ga' %>  
     <%= csrf_meta_tags %>
   </head>
-  <body>
+ <body>
 
-    <% if @wrapped %>
-      <div id="wrap">
-    <% end %>
-
-    <div class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="<%= root_url %>">komşu<small>yapar</small></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li <%= if current_page?(:controller => "hello", :action => "map") then 'class="active"'.html_safe end %>>
-              <%= link_to "Harita", map_path %>
-            </li>
-            <li <%= if current_page?(:controller => "points", :action => "new") then 'class="active"'.html_safe end %>>
-              <%= link_to "+Ekle", add_path %>
-            </li>
-            <li <%= if current_page?(:controller => "hello", :action => "about") then 'class="active"'.html_safe end %>>
-              <%= link_to "Nedir?", about_path %>
-            </li>
-            <% if current_user %>
-            <li class="dropdown" id="nav-notification">
-               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                 <i class="fa fa-bell"></i>
-               </a>
-               <ul class="dropdown-menu">
-                <li class="divider"></li>
-                <li><a href="/bildirimler">Tüm bildirimleri göster</a></li>
-               </ul>
-             </li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <%= image_tag "https://graph.facebook.com/" + current_user.uid + "/picture", :class => "img-avatar", :alt => "user avatar" %>
-                  <%= current_user.name %>
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Çıkış", sign_out_path %></li>
-                </ul>
-              </li>
-            <% else %>
-              
-            <% end %>
-          </ul>
-        </div>
+        <%= render 'layouts/navigation' %> 
       </div>
     </div>
-
-    <%= yield %>
-
-    <% if @wrapped %>
-      </div>
-      <div id="footer">
-        <div class="container">
-          <p class="credit">
-            
-          </p>
+    <main role="main">
+      <div class="container">
+        <div class="content">
+           <div class="row">
+            <div class="span12">
+              <% render 'layouts/messages' %>
+              <%= yield %>
+            </div>
+          </div>
+          <footer>
+          </footer>
         </div>
       </div>
-    <% end %>
+    </main>
 
   </body>
 </html>
