--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -22,7 +22,7 @@
           <div class="col-xs-5">
 
            <input id="city" class="form-control input-lg" name="query" autocomplete="false"
-                type="text" placeholder="Hizmet ara... örnek:Doktor" value="<% params[:query] %>">
+                type="text" placeholder="Hizmet ara... örnek:Temizlik" value="<% params[:query] %>">
           </div>
           <div class="col-xs-3">
             <select class="form-control input-lg" name="loc">
